[gd_scene load_steps=15 format=3 uid="uid://dcne32iho2ohv"]

[ext_resource type="Script" path="res://scripts/dialogue/dialogue_instance.gd" id="1_g7hym"]
[ext_resource type="Theme" uid="uid://pitvhinrum0q" path="res://ui/theme/ui.theme" id="1_ofy3w"]
[ext_resource type="Texture2D" uid="uid://b1bnq8j2xa3tx" path="res://textures/cgs/Lance CG_1 UPDATED.png" id="3_a2mmb"]
[ext_resource type="Texture2D" uid="uid://dnsstq7w7k4o8" path="res://textures/lance/Lance_Neutral.png" id="3_pjyws"]
[ext_resource type="Texture2D" uid="uid://iscucwpdb2an" path="res://ui/textures/Textbox.png" id="3_uxotw"]
[ext_resource type="Texture2D" uid="uid://cxa6lsi3l7joa" path="res://textures/lance/Lance_Ecstatic.png" id="4_6qp15"]
[ext_resource type="Texture2D" uid="uid://v51csf2l2sna" path="res://textures/cgs/Lance CG2.png" id="4_b0u2b"]
[ext_resource type="Texture2D" uid="uid://bwlv35ivqvykb" path="res://textures/backgrounds/parlour.png" id="4_yg5ib"]
[ext_resource type="AudioStream" uid="uid://bxvafpkinuwxo" path="res://sfx/dialogue/075653_cinematic-punches-35912.mp3" id="5_k3cem"]
[ext_resource type="Texture2D" uid="uid://bu0446mkkjxj6" path="res://textures/lance/Lance_Happy.png" id="5_pn675"]
[ext_resource type="Texture2D" uid="uid://dsvfoskvdshar" path="res://textures/mc/MC_Sprite.png" id="6_7n0wu"]
[ext_resource type="Texture2D" uid="uid://c6ep5wfbqkdlx" path="res://textures/mc/MC_Happy.png" id="6_h044f"]
[ext_resource type="FontFile" uid="uid://dsq807dy0tn51" path="res://ui/fonts/Laquile Serif.ttf" id="8_j0whe"]
[ext_resource type="AudioStream" uid="uid://b6w06n7eynvot" path="res://sfx/dialogue/dialogue_boop.wav" id="10_hvm62"]

[node name="dialogueInstance" type="Control"]
z_index = -6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ofy3w")
script = ExtResource("1_g7hym")
expressions = {
"lance_ecstatic": ExtResource("4_6qp15"),
"lance_neutral": ExtResource("3_pjyws"),
"mc_happy": ExtResource("6_h044f"),
"mc_neutral": ExtResource("6_7n0wu")
}
defaultExpression = "lance_neutral"
mcDefaultExpression = "mc_neutral"
backgrounds = {
"parlour": ExtResource("4_yg5ib")
}
startingBg = "parlour"
darkenColor = Color(0.458405, 0.458405, 0.458405, 1)
dialogueScript = "[cg lance_kiss][$name]"
cgs = {
"lance_kiss": ExtResource("4_b0u2b"),
"lance_talk": ExtResource("3_a2mmb")
}
sounds = {
"punch": ExtResource("5_k3cem")
}

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 5760.0
offset_bottom = 3240.0
scale = Vector2(0.334, 0.334)
texture = ExtResource("4_yg5ib")

[node name="characterTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1051.0
offset_top = -672.0
offset_right = 819.0
offset_bottom = 2648.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_pn675")
expand_mode = 4
stretch_mode = 4

[node name="mcTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -830.0
offset_top = 19.0
offset_right = 1040.0
offset_bottom = 3339.0
grow_horizontal = 0
scale = Vector2(0.45, 0.45)
texture = ExtResource("6_7n0wu")

[node name="overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="cgTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="textBox" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_uxotw")

[node name="sfxPlayer" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="dialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -704.0
offset_top = 112.0
offset_right = 687.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_group_ = true

[node name="text" type="Label" parent="dialoguePanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -21.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "welcome to my parlor lil bro"
autowrap_mode = 3

[node name="nameText" type="Label" parent="dialoguePanel"]
layout_mode = 0
offset_left = 119.0
offset_top = -101.0
offset_right = 836.0
offset_bottom = -14.0
theme_override_fonts/font = ExtResource("8_j0whe")
theme_override_font_sizes/font_size = 64
text = "Lance"

[node name="nextCharTimer" type="Timer" parent="."]
wait_time = 0.025
one_shot = true

[node name="boopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_hvm62")
bus = &"sfx"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="nextCharTimer" to="." method="_on_next_char_timer_timeout"]
